--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-16 19:25+0000\n"
-"PO-Revision-Date: 2021-03-16 20:33+0100\n"
+"POT-Creation-Date: 2021-03-16 19:45+0000\n"
+"PO-Revision-Date: 2021-03-16 20:48+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1157,21 +1157,23 @@ msgstr "Questionnaire"
 
 #: character/templates/character/overview.html:24
 msgid ""
-"Die hier angebotenen Persönlichkeitstests basieren auf <a href=\"https://"
-"ipip.ori.org/newNEOKey.htm\" target=\"_blank\">frei verfügbaren Fragen</a>, "
-"die auf den <a href=\"https://de.wikipedia.org/wiki/Big_Five_(Psychologie)\" "
-"target=\"_blank\">Big Five</a> der Persönlichkeitspsychologie fußen."
-"<br><br>Der offizielle NEO-PI-R Persönlichkeitstest umfasst 240 Fragen. "
-"Weniger Fragen sind zwar schneller zu beantworten, liefern aber ein unter "
-"Wiederholung instabileres Testergebnis."
+"Die hier angebotenen Persönlichkeitstests wurden in Anlehnung an den NEO-PI-"
+"R Test erstellt und basieren auf <a href=\"https://ipip.ori.org/newNEOKey.htm"
+"\" target=\"_blank\">frei verfügbaren Fragen</a>, die auf den <a href="
+"\"https://de.wikipedia.org/wiki/Big_Five_(Psychologie)\" target=\"_blank"
+"\">Big Five</a> der Persönlichkeitspsychologie fußen.<br><br>Der offizielle "
+"NEO-PI-R Persönlichkeitstest umfasst 240 Fragen. Weniger Fragen sind zwar "
+"schneller zu beantworten, liefern aber ein unter Wiederholung instabileres "
+"Testergebnis."
 msgstr ""
-"The offered personality tests are based on <a href=\"https://ipip.ori.org/"
-"newNEOKey.htm\" target=\"_blank\">questions in public domain</a> which have "
-"been created in conjunction with the <a href=\"https://en.wikipedia.org/wiki/"
-"Big_Five_personality_traits\" target=\"_blank\">Big Five</a> of "
-"psychological trait theory.<br><br>The official NEO-PI-R personality test "
-"comprises 240 questions. Less questions don't take as much time to answer, "
-"but might yield less consistent results if the test is taken more than once."
+"The offered personality tests are based on the NEO-PI-R test and use <a href="
+"\"https://ipip.ori.org/newNEOKey.htm\" target=\"_blank\">questions in public "
+"domain</a> which have been created in conjunction with the <a href=\"https://"
+"en.wikipedia.org/wiki/Big_Five_personality_traits\" target=\"_blank\">Big "
+"Five</a> of psychological trait theory.<br><br>The official NEO-PI-R "
+"personality test comprises 240 questions. Less questions don't take as much "
+"time to answer, but might yield less consistent results if the test is taken "
+"more than once."
 
 #: character/templates/character/overview.html:29
 #: character/templates/character/overview.html:33
@@ -1194,6 +1196,15 @@ msgstr "Score"
 #: character/templates/character/overview.html:99
 msgid "Zurücksetzen"
 msgstr "Reset"
+
+#: character/templates/character/overview.html:103
+msgid ""
+"Antworten auf individuelle Fragen werden <u>nicht gespeichert</u>. Nur die "
+"Punktsumme in den Kategorien wird zum Berechnen von Empfehlungen verwendet "
+"und für sonst nichts."
+msgstr ""
+"Answers to individual questions are <u>not saved</u>. Only the score in the "
+"respective categories is used to calculate suggestions and for nothing else."
 
 #: character/templates/character/quiz.html:5
 #: character/templates/character/quiz.html:9
