--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-17 21:26+0000\n"
+"POT-Creation-Date: 2021-03-17 21:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -120,7 +120,7 @@ msgid "Bitte bestätigen Sie, dass Sie Ihren Account löschen wollen."
 msgstr ""
 
 #: account/forms.py:151
-msgid "E-Mail"
+msgid "E-Mail oder Nutzername"
 msgstr ""
 
 #: account/forms.py:158
