--- a/todo.txt
+++ b/todo.txt
@@ -37,7 +37,6 @@ notifications von gelöschten targets mitlöschen (termin erstellt -> termin gel
 Fehler links kommt rechts spielt ich bin dran ohne karte von rechts zu sehen, er hat wohl done geschickt
 musikgenres, literaturgenres, weitere unterteilungen.. -> N kategorien: berufe, musikgenres, freizeitaktivitäten, ...
 
-1. likes für posts
-2. empfehlungen nach kategorien
 3. übrige gewichte verteilen
 4. für jede aktivität ein applet
+5. impressum!
