--- a/todo.txt
+++ b/todo.txt
@@ -10,8 +10,6 @@ for connection
 <WebRequest at 0x7f83087b7550 method=GET uri=/multiplayer/enter_match/Doppelkopf/73/ clientproto=HTTP/1.1> 
 took too long to shut down and was killed.
 
-aktivitäten vorschlagen: 5 mit den meisten mitgliedern (vorschläge wegklicken), fragebogen ausfüllen
-
 doko 5 chatmiglieder 2x heinz?
 neu drücken button bestätigen
 verhindere caching bei chats um "closed due to suspension" zu vermeiden
@@ -26,3 +24,6 @@ optimierung: chat cache, aktualisierung bei beitritt/austritt
 match overview keine aktualisierung bei chat beitreten
 
 DOMException: Remote description indicates ICE restart but offer did not request ICE restart (new remote description changes either the ice-ufrag or ice-pwd)
+
+chat öffnen, scroll zum aktuellen chat
+chats durchnummieren oder sonst irgendwie unterscheiden (Skat-Match, Skat-Match, ..)
