--- a/todo.txt
+++ b/todo.txt
@@ -81,5 +81,5 @@ neuer nutzer im chat wird nicht angezeigt
 4 leute nicht jeder hört jeden nach start des spiels
 schlucken drücken dann schieben noch möglich
 gespräch angefangen fortsetzen wenn raus 
-umfragen: jede aktivität eine umfrage nach location sortiert nach teilnehmeranzahl, max. 10, jeder kann element hinzufügen als vorschlag und entfernen wenn sich genug leute finden (5-10?)
-maps: jeder kann punkte vorschlagen und annotieren und löschen wenn sich genug leute finden (5-10?)
+umfragen: jede aktivität umfragen nach location, max. 10, jeder kann element hinzufügen als vorschlag und entfernen wenn sich genug leute finden (5-10?), feste fragen für jede aktivität (kochen: beste rezepte? bester supermarkt?; snooker: wo? beliebteste Spieler?)
+nutzer kann seine marker bearbeiten
