--- a/todo.txt
+++ b/todo.txt
@@ -83,4 +83,6 @@ schlucken drücken dann schieben noch möglich
 gespräch angefangen fortsetzen wenn raus 
 umfragen: jede aktivität umfragen nach location, max. 10, jeder kann element hinzufügen als vorschlag und entfernen wenn sich genug leute finden (5-10?), feste fragen für jede aktivität (kochen: beste rezepte? bester supermarkt?; snooker: wo? beliebteste Spieler?)
 location selection über websocket
-durak karte kurz anzeigen dann erst in die mitte
+scheiß footer
+logo
+anonym ohne registrieren?
