--- a/todo.txt
+++ b/todo.txt
@@ -93,4 +93,12 @@ vertikale liste umranden
 link bild weg
 divs anderen hintergrund zum hervorheben
 icons ausmachen
-chat eigens icon für jeden typ falls kein bild
+nach fold vor flop werden die karten wieder angezeigt nach dem flop und nach spielende sofort weggeklickt
+all in anzeige falsch
+wenn blindende erreicht keine info mehr summary
+chat nicht chat dann gefolded werden wieder angezeigt
+all in bei mindesteinsatz nicht möglich
+schlucken, ich muss als angreifer fertig drücken?
+nach dem schlucken doppelt was geschluckt wurde
+verteidiger verteidigt und andere nicht done
+zwei karten schlucken dann noch eine dazulegen dann bug
