--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-13 13:45+0000\n"
-"PO-Revision-Date: 2021-05-13 15:50+0200\n"
+"POT-Creation-Date: 2021-05-14 13:50+0000\n"
+"PO-Revision-Date: 2021-05-14 15:51+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -474,9 +474,9 @@ msgstr "You can edit your account with the following form:"
 #: competitions/templates/competitions/create_tournament.html:12
 #: competitions/templates/competitions/edit_match.html:15
 #: competitions/templates/competitions/edit_tournament.html:12
-#: multiplayer/templates/javascript/durak.js:408
-#: multiplayer/templates/javascript/durak.js:444
-#: multiplayer/templates/javascript/durak.js:462
+#: multiplayer/templates/javascript/durak.js:417
+#: multiplayer/templates/javascript/durak.js:453
+#: multiplayer/templates/javascript/durak.js:471
 #: multiplayer/templates/multiplayer/create_match.html:12
 #: scheduling/templates/scheduling/create_appointment.html:14
 #: usergroups/templates/usergroups/edit_group.html:13
@@ -524,7 +524,7 @@ msgstr "Saved: "
 
 #: account/templates/account/edit.html:41 account/templates/base.html:50
 #: account/templates/javascript/base.js:51
-#: activity/templates/activity/detail.html:98
+#: activity/templates/activity/detail.html:96
 msgid "OK!"
 msgstr "OK!"
 
@@ -805,13 +805,7 @@ msgid "Liste von Personen in"
 msgstr "List of people in"
 
 #: account/templates/account/people_list.html:11
-#, fuzzy, python-format
-#| msgid ""
-#| "Hier werden die ersten 30 Mitglieder in der ausgewählten Gegend "
-#| "angezeigt. Haben Sie den <a href=\"/character/overview"
-#| "\">Persönlichkeitstest</a> gemacht, werden die Mitglieder nach "
-#| "Charakterübereinstimmung sortiert. Schicken Sie doch eine "
-#| "Freundschaftsanfrage an die Leute ganz hinten &#128540;"
+#, python-format
 msgid ""
 "Hier werden die ersten 30 Mitglieder in der ausgewählten Gegend angezeigt. "
 "Haben Sie den <a href=\"/character/overview\">Persönlichkeitstest</a> "
@@ -821,8 +815,8 @@ msgid ""
 msgstr ""
 "The first 30 members in the selected location are listed here. If you've "
 "completed the <a href=\"/character/overview\">personality test</a>, members "
-"are sorted by character congruence in %. Why don't you send a friend request "
-"to someone at the end of the list &#128540;"
+"are sorted by character congruence in %%. Why don't you send a friend "
+"request to someone at the end of the list &#128540;"
 
 #: account/templates/account/people_list.html:14
 #: activity/templates/activity/activity_list.html:18
@@ -853,6 +847,7 @@ msgstr "Total users: "
 
 #: account/templates/account/register.html:12
 #: account/templates/registration/login.html:13
+#: multiplayer/templates/multiplayer/lobby.html:19
 msgid "Online: "
 msgstr "Online: "
 
@@ -1002,7 +997,7 @@ msgid "Ihre Posts"
 msgstr "Your posts"
 
 #: account/templates/account/user_post_list.html:9
-#: activity/templates/activity/detail.html:138
+#: activity/templates/activity/detail.html:136
 #: usergroups/templates/usergroups/group_detail.html:76
 msgid "Post erstellen"
 msgstr "Create post"
@@ -1176,7 +1171,7 @@ msgid ""
 msgstr "Enter your email address to reset your password."
 
 #: account/templates/registration/password_reset_form.html:12
-#: activity/templates/activity/detail.html:104
+#: activity/templates/activity/detail.html:102
 #: multiplayer/templates/javascript/cards.js:528
 #: vacancies/templates/vacancies/apply_for_vacancy.html:14
 #: wall/templates/wall/post/create_comment.html:11
@@ -1348,40 +1343,40 @@ msgstr "Personal fit: "
 msgid "Gehört zu: "
 msgstr "Belongs to: "
 
-#: activity/templates/activity/detail.html:60
+#: activity/templates/activity/detail.html:58
 msgid "Gewichtungen bearbeiten"
 msgstr "Edit weights"
 
-#: activity/templates/activity/detail.html:68
+#: activity/templates/activity/detail.html:66
 msgid "Offline spielen"
 msgstr "Play offline"
 
-#: activity/templates/activity/detail.html:73
+#: activity/templates/activity/detail.html:71
 #: multiplayer/templates/multiplayer/create_match.html:4
 msgid "Online spielen"
 msgstr "Play online"
 
-#: activity/templates/activity/detail.html:83
+#: activity/templates/activity/detail.html:81
 #, python-format
 msgid "%(activity)s-Chat beitreten"
 msgstr "join %(activity)s-chat"
 
-#: activity/templates/activity/detail.html:88
+#: activity/templates/activity/detail.html:86
 #: competitions/templates/competitions/match_detail.html:35
 #: competitions/templates/competitions/tournament_detail.html:37
 #: usergroups/templates/usergroups/group_detail.html:37
 msgid "Austreten"
 msgstr "Leave"
 
-#: activity/templates/activity/detail.html:90
+#: activity/templates/activity/detail.html:88
 msgid "Suche nach Mitgliedern"
 msgstr "Members"
 
-#: activity/templates/activity/detail.html:97
+#: activity/templates/activity/detail.html:95
 msgid "Die Markierung "
 msgstr "The marker "
 
-#: activity/templates/activity/detail.html:97
+#: activity/templates/activity/detail.html:95
 #, python-format
 msgid ""
 " ist nun für alle Mitglieder der Aktivität \"%(act)s\" in %(comp)s sichtbar. "
@@ -1391,15 +1386,15 @@ msgstr ""
 " is now visible for all members of the activity „%(act)s“ in %(comp)s. You "
 "can edit your markers at „<a href='/account/edit/'>edit account</a>“."
 
-#: activity/templates/activity/detail.html:101
+#: activity/templates/activity/detail.html:99
 msgid "Standortmarkierung"
 msgstr "Location marker"
 
-#: activity/templates/activity/detail.html:102
+#: activity/templates/activity/detail.html:100
 msgid "Wie heißt der Ort, an dem Sie sich befinden?"
 msgstr "What’s the name of your location?"
 
-#: activity/templates/activity/detail.html:104
+#: activity/templates/activity/detail.html:102
 #: multiplayer/templates/javascript/cards.js:533
 #: multiplayer/templates/multiplayer/game.html:44
 #: multiplayer/templates/multiplayer/game.html:72
@@ -1407,26 +1402,26 @@ msgstr "What’s the name of your location?"
 msgid "Abbrechen"
 msgstr "Cancel"
 
-#: activity/templates/activity/detail.html:113
+#: activity/templates/activity/detail.html:111
 msgid "Standort markieren"
 msgstr "Mark location"
 
-#: activity/templates/activity/detail.html:117
-#: activity/templates/activity/detail.html:123
+#: activity/templates/activity/detail.html:115
+#: activity/templates/activity/detail.html:121
 #: activity/templates/javascript/map.js:78
 msgid "Wo bin ich?"
 msgstr "Where am I?"
 
-#: activity/templates/activity/detail.html:131
+#: activity/templates/activity/detail.html:129
 msgid "Um Mitglieder anzeigen zu können, müssen Sie beitreten."
 msgstr "If you want to see the members, you need to enter the activity."
 
-#: activity/templates/activity/detail.html:134
+#: activity/templates/activity/detail.html:132
 #: multiplayer/templates/javascript/lobby.js:46
 msgid "Beitreten"
 msgstr "Join"
 
-#: activity/templates/activity/detail.html:137
+#: activity/templates/activity/detail.html:135
 msgid "Beiträge"
 msgstr "Posts"
 
@@ -2493,7 +2488,6 @@ msgid "Spielplan"
 msgstr "Match schedule"
 
 #: competitions/templates/competitions/user_overview.html:8
-#: multiplayer/templates/multiplayer/lobby.html:22
 msgid "Online"
 msgstr "Online"
 
@@ -2757,11 +2751,11 @@ msgstr "ATTACKER"
 msgid "VERTEIDIGER"
 msgstr "DEFENDER"
 
-#: multiplayer/templates/javascript/durak.js:424
+#: multiplayer/templates/javascript/durak.js:433
 msgid "Schlucken"
 msgstr "Gobble"
 
-#: multiplayer/templates/javascript/durak.js:434
+#: multiplayer/templates/javascript/durak.js:443
 msgid "Schieben"
 msgstr "Transfer"
 
@@ -2952,31 +2946,33 @@ msgstr "Blinds"
 #: multiplayer/templates/multiplayer/lobby.html:14
 #, python-format
 msgid ""
-"Hier können Sie %(activity)s online spielen. Als Ersteller eines Matches "
-"können Sie das Spiel starten, wenn die eingestellte Spieleranzahl anwesend "
-"ist. Durch Klick auf den Mülleimer schmeißen Sie Leute raus. Bitte treten "
-"Sie dann nicht wieder ohne guten Grund ein! Den Chat erreichen Sie im Spiel "
-"über den Chat-Button oben rechts."
+"Hier können Sie %(activity)s online spielen (<a href=\"/multiplayer/rules"
+"\">Spielregeln finden Sie hier</a>). Als Ersteller eines Matches können Sie "
+"das Spiel starten, wenn die eingestellte Spieleranzahl anwesend ist. Durch "
+"Klick auf den Mülleimer schmeißen Sie Leute raus. Bitte treten Sie dann "
+"nicht wieder ohne guten Grund ein! Den Chat erreichen Sie im Spiel über den "
+"Chat-Button oben rechts."
 msgstr ""
-"Here you can play %(activity)s online. If you've created a match, you can "
-"start it once the specified member limit is reached. By clicking on the "
-"garbage can you can kick users. Don't rejoin a game that you've been kicked "
-"from unless you have a good reason. During the game, the chat can be "
-"accessed by the chat button in the top right corner."
+"Here you can play %(activity)s online (<a href=\"/multiplayer/rules\">you "
+"can find the rules here</a>). If you've created a match, you can start it "
+"once the specified member limit is reached. By clicking on the garbage can "
+"you can kick users. Don't rejoin a game that you've been kicked from unless "
+"you have a good reason. During the game, the chat can be accessed by the "
+"chat button in the top right corner."
 
-#: multiplayer/templates/multiplayer/lobby.html:35
+#: multiplayer/templates/multiplayer/lobby.html:25
 msgid "Beigetreten"
 msgstr "Joined"
 
-#: multiplayer/templates/multiplayer/lobby.html:50
+#: multiplayer/templates/multiplayer/lobby.html:40
 msgid "Spielen"
 msgstr "Play"
 
-#: multiplayer/templates/multiplayer/lobby.html:53
+#: multiplayer/templates/multiplayer/lobby.html:43
 msgid "Zur Übersicht"
 msgstr "Overview"
 
-#: multiplayer/templates/multiplayer/lobby.html:68
+#: multiplayer/templates/multiplayer/lobby.html:58
 msgid "Öffentliche Liste"
 msgstr "Public list"
 
@@ -2987,6 +2983,154 @@ msgstr "Leave"
 #: multiplayer/templates/multiplayer/match.html:34
 msgid "Starten"
 msgstr "Start"
+
+#: multiplayer/templates/multiplayer/rules.html:6
+#: multiplayer/templates/multiplayer/rules.html:9
+msgid "Spielregeln"
+msgstr "Rules of the games"
+
+#: multiplayer/templates/multiplayer/rules.html:11
+msgid ""
+"Durak hat einen relativ leichten Regelsatz und wird hier direkt erklärt. Bei "
+"den anderen Spielen sei auf die Wikipedia-Seite verwiesen."
+msgstr ""
+"Durak has a relatively simple set of rules and is explained right here. "
+"Concerning the other games, I'd like to refer to the respective wikipedia "
+"site."
+
+#: multiplayer/templates/multiplayer/rules.html:16
+msgid ""
+"\n"
+"        <h3><a href=\"https://de.wikipedia.org/wiki/Doppelkopf\">Doppelkopf "
+"auf Wikipedia</a></h3>\n"
+"        <ul>\n"
+"            <li>Blatt: Mit/Ohne Neunen</li>\n"
+"            <li>Soli: Ohne Pflichtsolo. Solospieler kommt raus. Erstes "
+"angesagtes Solo zählt. Mit Fleischloser.</li>\n"
+"            <li>Hochzeit: Erster fremde Stich.</li>\n"
+"            <li>Sonderpunkte: Doppelkopf, Fuchs gefangen, Karlchen</li>\n"
+"            <li>Ohne: Armut, Schweinchen, zweite Dulle sticht erste, "
+"Bockrunden, Karlchen gefangen</li>\n"
+"        </ul>\n"
+"        "
+msgstr ""
+"\n"
+"        <h3><a href=\"https://en.wikipedia.org/wiki/Doppelkopf\">Doppelkopf "
+"on Wikipedia</a></h3>\n"
+"        <ul>\n"
+"            <li>Cards: With/Without Nines</li>\n"
+"            <li>Solos: No compulsory solos. Solo player starts. First "
+"announced solo counts. With Ace Solo.</li>\n"
+"            <li>Marriage: First trick by other player.</li>\n"
+"            <li>Extra points: Doppelkopf, Catching the Fox, Charlie Miller.</"
+"li>\n"
+"            <li>Without: Poverty, Piglets, second Dulle catches first.</li>\n"
+"        </ul>\n"
+"        "
+
+#: multiplayer/templates/multiplayer/rules.html:32
+msgid ""
+"\n"
+"        <h3><a href=\"https://de.wikipedia.org/wiki/"
+"Durak_(Kartenspiel)\">Durak auf Wikipedia</a></h3>\n"
+"            <ul>\n"
+"                <li>Karten: 6-Ass (2-3 Spieler), 3-Ass (4 Spieler)</li>\n"
+"                <li>Modus: Schieben erlaubt, ohne Nachschmeißen nach "
+"Schlucken</li>\n"
+"            </ul>\n"
+"            Ziel des Spiels: Keine Karten mehr zu haben. Erster ohne Karten "
+"erhält +2, letzter mit Karten -1, Rest +1 Punkte. Der Angreifer kann 1-4 "
+"Karten desselben Ranges auf den Verteidiger ausspielen. Der Verteidiger "
+"spielt mit seinen beiden Nachbarn und kann nach einem Angriff:\n"
+"            <ul>\n"
+"                <li>Aufnehmen (Schlucken). Nachbarn können anschließend "
+"insgesamt max. 6 Karten der Ränge dazulegen, die bereits gespielt worden "
+"sind und klicken dann auf \"Fertig\".</li>\n"
+"                <li>Schlagen. Eine Karte kann mit Trumpf bzw. einer Karte "
+"derselben Farbe, aber höheren Ranges geschlagen werden. Nachbarn verhalten "
+"sich wie beim Schlucken.</li>\n"
+"                <li>Schieben. Wurde weder geschlagen noch geschluckt können "
+"1-3 Karten desselben Ranges dazugelegt und zum linken Nachbarn "
+"weitergeschoben werden. Dieser wird dann Verteidiger.</li>\n"
+"            </ul>\n"
+"        Hat ein Spieler weniger als 6 Karten, darf er mit maximal so vielen "
+"Karten angegriffen werden, wie er auf der Hand hat.<br>\n"
+"        Nach Schlucken/Schlagen füllen, beginnend mit dem ersten Angreifer, "
+"alle Spieler ihre Hände auf 6 Karten auf. Schlucken: Linker Nachbar kommt "
+"raus. Erfolgreiches Schlagen: Geschlagene Karten aus dem Spiel entfernen, "
+"Spieler kommt selbst raus.\n"
+"        Kartenränge (absteigend): Ass, König, Dame, Bube, 10, 9, 8, ...<br>\n"
+"        Die offene Deckkarte zeigt die Trumpffarbe an. Trumpfkarten sind "
+"höheren Ranges als alle Fehlkarten.\n"
+"        "
+msgstr ""
+"\n"
+"        <h3><a href=\"https://en.wikipedia.org/wiki/Durak\">Durak on "
+"Wikipedia</a></h3>\n"
+"            <ul>\n"
+"                <li>Cards: 6-Ace (2-3 players), 3-Ace (4 players)</li>\n"
+"                <li>Mode: With transfer</li>\n"
+"            </ul>\n"
+"            Goal: To not be the last player with cards. First one without "
+"cards gets +2, last one with cards -1, rest +1 points. The attack plays 1-4 "
+"cards of the same rank to the defender. The defender plays with both his "
+"neighbors and can then:\n"
+"            <ul>\n"
+"                <li>Take (gobble). Neighbors can subsequently play up to a "
+"total of 6 cards of the ranks of the cards already played and then click "
+"\"Done\".</li>\n"
+"                <li>Beat. A card can be beaten with trump or a card of the "
+"same color but higher rank. Neighbors act like previously explained.</li>\n"
+"                <li>Transfer. Have the cards not yet been taken or beaten, "
+"1-3 cards of the same rank can be played and transferred to the left "
+"neighbor who then becomes defender.</li>\n"
+"            </ul>\n"
+"        If a player has less than 6 cards, he can only be attacked with as "
+"many cards as he has left.<br>\n"
+"        After Take/Beat every player, starting with the first attacker, has "
+"to fill his hand up to 6 cards if possible. After take: Left neighbor is "
+"attacker. After successful beating: remove beaten cards and previous "
+"defender is attacker.\n"
+"        Card ranks (descending): Ace, King, Queen, Jack, 10, 9, 8, ...<br>\n"
+"        The open deck card indicates the trump color. Trump cards are of "
+"higher rank than all non-trump cards.\n"
+"        "
+
+#: multiplayer/templates/multiplayer/rules.html:55
+msgid ""
+"\n"
+"        <h3><a href=\"https://de.wikipedia.org/wiki/Texas_Hold'em\">Poker "
+"auf Wikipedia</a></h3>\n"
+"        "
+msgstr ""
+"\n"
+"        <h3><a href=\"https://en.wikipedia.org/wiki/Texas_hold'em\">Poker on "
+"Wikipedia</a></h3>\n"
+"        "
+
+#: multiplayer/templates/multiplayer/rules.html:64
+msgid ""
+"\n"
+"        <h3><a href=\"https://de.wikipedia.org/wiki/Skat\">Skat auf "
+"Wikipedia</a></h3>\n"
+"        <ul>\n"
+"            <li>Abrechnung: Seeger-Fabian (+/- 50 falls gewonnen/verloren, "
+"Gegenspieler erhalten bei Gewinn +40)</li>\n"
+"            <li>Aus dem Schneider: 31 Augen</li>\n"
+"            <li>Ohne: Re/Kontra, Spitze, Bockrunden, Ramsch</li>\n"
+"        </ul>\n"
+"        "
+msgstr ""
+"\n"
+"        <h3><a href=\"https://en.wikipedia.org/wiki/Skat_(card_game)\">Skat "
+"on Wikipedia</a></h3>\n"
+"        <ul>\n"
+"            <li>Counting points: Seeger-Fabian (+/- 50 if won/lost, "
+"opponents get +40 if won)</li>\n"
+"            <li>Points required for Schneider: 91</li>\n"
+"            <li>Without: Re/Kontra, Spitze, Ramsch</li>\n"
+"        </ul>\n"
+"        "
 
 #: multiplayer/views.py:18
 #, python-brace-format
@@ -3516,6 +3660,9 @@ msgstr "[Delete]"
 #, python-format
 msgid " vor %(v0)s"
 msgstr " %(v0)s ago"
+
+#~ msgid "(Zu den Spielregeln..)"
+#~ msgstr "(Rules of the game..)"
 
 #~ msgid "Halt! Kein Zutritt!"
 #~ msgstr "Stop! No admittance!"
