--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-14 13:50+0000\n"
+"POT-Creation-Date: 2021-05-14 14:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1318,7 +1318,8 @@ msgid "Wo bin ich?"
 msgstr ""
 
 #: activity/templates/activity/detail.html:129
-msgid "Um Mitglieder anzeigen zu können, müssen Sie beitreten."
+msgid ""
+"Um Mitglieder anzeigen und Orte markieren zu können, müssen Sie beitreten."
 msgstr ""
 
 #: activity/templates/activity/detail.html:132
