--- a/todo.txt
+++ b/todo.txt
@@ -103,3 +103,4 @@ nach dem schlucken doppelt was geschluckt wurde
 verteidiger verteidigt und andere nicht done
 zwei karten schlucken dann noch eine dazulegen dann bug
 active if weg
+h1 check ohne image
