--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-16 17:48+0000\n"
-"PO-Revision-Date: 2021-05-16 19:48+0200\n"
+"POT-Creation-Date: 2021-05-16 18:23+0000\n"
+"PO-Revision-Date: 2021-05-16 20:25+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -2859,30 +2859,36 @@ msgid ""
 "Hier können Sie %(activity)s online spielen (<a href=\"/multiplayer/rules"
 "\">Spielregeln finden Sie hier</a>). Als Ersteller eines Matches können Sie "
 "das Spiel starten, wenn die eingestellte Spieleranzahl anwesend ist. Durch "
-"Klick auf den Mülleimer schmeißen Sie Leute raus. Bitte treten Sie dann "
-"nicht wieder ohne guten Grund ein! Den Chat erreichen Sie im Spiel über den "
-"Chat-Button oben rechts."
+"Klick auf den Mülleimer schmeißen Sie Leute raus. Den Chat erreichen Sie im "
+"Spiel über den Chat-Button oben rechts.<br><span style=\"color: yellow"
+"\">Noch nicht begonnene Spiele werden nach 1 Stunde, laufende nach 2 Tagen "
+"automatisch gelöscht.</span>"
 msgstr ""
 "Here you can play %(activity)s online (<a href=\"/multiplayer/rules\">you "
 "can find the rules here</a>). If you've created a match, you can start it "
 "once the specified member limit is reached. By clicking on the garbage can "
 "you can kick users. Don't rejoin a game that you've been kicked from unless "
 "you have a good reason. During the game, the chat can be accessed by the "
-"chat button in the top right corner."
+"chat button in the top right corner.<br><span style=\"color: yellow"
+"\">Running games are deleted after 2 days, all others after 1 hour.</span>"
 
 #: multiplayer/templates/multiplayer/lobby.html:25
 msgid "Beigetreten"
 msgstr "Joined"
 
-#: multiplayer/templates/multiplayer/lobby.html:40
+#: multiplayer/templates/multiplayer/lobby.html:35
+msgid "noch"
+msgstr "remaining:"
+
+#: multiplayer/templates/multiplayer/lobby.html:41
 msgid "Spielen"
 msgstr "Play"
 
-#: multiplayer/templates/multiplayer/lobby.html:43
+#: multiplayer/templates/multiplayer/lobby.html:44
 msgid "Zur Übersicht"
 msgstr "Overview"
 
-#: multiplayer/templates/multiplayer/lobby.html:58
+#: multiplayer/templates/multiplayer/lobby.html:59
 msgid "Öffentliche Liste"
 msgstr "Public list"
 
