--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-05-16 18:23+0000\n"
-"PO-Revision-Date: 2021-05-16 20:25+0200\n"
+"PO-Revision-Date: 2021-05-16 20:31+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -2911,7 +2911,7 @@ msgid ""
 "den anderen Spielen sei auf die Wikipedia-Seite verwiesen."
 msgstr ""
 "Durak has a relatively simple set of rules and is explained right here. "
-"Concerning the other games, I'd like to refer to the respective wikipedia "
+"Concerning the other games, I'd like to refer to the respective Wikipedia "
 "site."
 
 #: multiplayer/templates/multiplayer/rules.html:16
@@ -2988,8 +2988,8 @@ msgstr ""
 "                <li>Mode: With transfer</li>\n"
 "            </ul>\n"
 "            Goal: To not be the last player with cards. First one without "
-"cards gets +2, last one with cards -1, rest +1 points. The attack plays 1-4 "
-"cards of the same rank to the defender. The defender plays with both his "
+"cards gets +2, last one with cards -1, rest +1 points. The attacker plays "
+"1-4 cards of the same rank to the defender. The defender plays with both his "
 "neighbors and can then:\n"
 "            <ul>\n"
 "                <li>Take (gobble). Neighbors can subsequently play up to a "
