--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-05-16 18:23+0000\n"
-"PO-Revision-Date: 2021-05-16 20:31+0200\n"
+"PO-Revision-Date: 2021-05-16 20:33+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -3005,7 +3005,7 @@ msgstr ""
 "many cards as he has left.<br>\n"
 "        After Take/Beat every player, starting with the first attacker, has "
 "to fill his hand up to 6 cards if possible. After take: Left neighbor is "
-"attacker. After successful beating: remove beaten cards and previous "
+"attacker. After successful beating: Remove beaten cards and previous "
 "defender is attacker.\n"
 "        Card ranks (descending): Ace, King, Queen, Jack, 10, 9, 8, ...<br>\n"
 "        The open deck card indicates the trump color. Trump cards are of "
