--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-16 18:56+0000\n"
-"PO-Revision-Date: 2021-05-16 20:42+0200\n"
+"POT-Creation-Date: 2021-05-16 22:27+0000\n"
+"PO-Revision-Date: 2021-05-17 00:28+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -950,6 +950,14 @@ msgstr ""
 "Your account at https://www.myactivities.net has been successfully created. "
 "Click the link to activate it."
 
+#: account/templates/registration/activation_email.html:9
+msgid ""
+"Der Link ist 3 Tage gültig. Sie können durch erneutes Registrieren jederzeit "
+"einen neuen anfordern."
+msgstr ""
+"The activation link is valid for 3 days. You can request a new one by "
+"registering again."
+
 #: account/templates/registration/login.html:7
 #: account/templates/registration/login.html:14
 #: account/templates/registration/login.html:23
@@ -1131,7 +1139,9 @@ msgid "Sie haben die Freundschaft mit {user} beendet."
 msgstr "You terminated your friendship with {user}."
 
 #: account/views.py:165
-msgid "An die E-Mail Adresse konnte keine E-Mail gesendet werden."
+#, fuzzy
+#| msgid "An die E-Mail Adresse konnte keine E-Mail gesendet werden."
+msgid "An die E-Mail Adresse konnte keine E-Mail gesendet werden. "
 msgstr "No e-mail could be sent to the specified address."
 
 #: account/views.py:179
